--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -104,7 +104,7 @@
             var result = response.data.message;
 
             if (result == 'Success') {
-                alert('登录成功')
+                window.location.href = "index.html";
             } else if (result == 'LoginRefuse') {
                 alert('账号已被封禁')
             } else {
