--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/gh/WendyBoys/oss/js/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/WendyBoys/oss/js/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/WendyBoys/oss/js/jquery.cookie.js"></script>
 </head>
 <body style=" background: #ffffff no-repeat center center fixed; background-size: 100%;">
 
@@ -89,11 +90,10 @@
     $('#login').click(function () {
         var account = $('#account').val();
         var password = $('#password').val();
-        if (account.trim() == '' || account == undefined) {
+        if (account == undefined || account.trim() == '') {
             alert('账号不能为空');
             return;
-        }
-        else if (password.trim() == '' || password == undefined) {
+        } else if (password == undefined || password.trim() == '') {
             alert('密码不能为空');
             return;
         }
@@ -102,8 +102,9 @@
             password: password,
         }).then((response) => {
             var result = response.data.message;
-
             if (result == 'Success') {
+                var tokenCookie = response.data.data;
+                $.cookie('token', tokenCookie, {expires: 7});
                 window.location.href = "index.html";
             } else if (result == 'LoginRefuse') {
                 alert('账号已被封禁')
@@ -117,12 +118,10 @@
     $('#register').click(function () {
         var registerAccount = $('#registerAccount').val();
         var registerPassword = $('#registerPassword').val();
-        console.log(registerAccount)
-        if (registerAccount.trim() == '' || registerAccount == undefined) {
+        if (registerAccount == undefined || registerAccount.trim() == '') {
             alert('账号不能为空');
             return;
-        }
-        else if (registerPassword.trim() == '' || registerPassword == undefined) {
+        } else if (registerPassword == undefined || registerPassword.trim() == '') {
             alert('密码不能为空');
             return;
         }
