数据源测试

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -213,7 +213,7 @@
                                 </div>
                                 <div class="list-group list-group-flush">
                                     <a href="#" class="list-group-item" data-sidebar-target="#settings">Settings</a>
-                                    <span id="logout" class="list-group-item text-danger">注销</span>
+                                    <span id="logout" style="cursor: pointer;"  class="list-group-item text-danger">注销</span>
                                 </div>
                                 <div class="pb-0 p-4">
                                     <div class="mb-4">
@@ -287,7 +287,7 @@
                     </a>
                 </li>
                 <li class="flex-grow-1">
-                    <a href="alert.html">
+                    <a href="datasource.html">
                         <i class="nav-link-icon ti-layers"></i>
                         <span class="nav-link-label">数据迁移</span>
                     </a>
