--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -1,198 +1,204 @@
 <div class="header d-print-none">
-				<div class="header-container">
-					<div class="header-body">
-						<div class="header-body-left">
-							<ul class="navbar-nav">
-								<li class="nav-item navigation-toggler">
-									<a href="#" class="nav-link">
-										<i class="ti-menu"></i>
-									</a>
-								</li>
-								<li class="nav-item">
-									<div class="header-search-form">
-										<form>
-											<div class="input-group">
-												<div class="input-group-prepend">
-													<button class="btn">
-														<i class="ti-search"></i>
-													</button>
-												</div>
-												<input type="text" class="form-control" placeholder="Search something...">
-												<div class="input-group-append">
-													<button class="btn header-search-close-btn">
-														<i data-feather="x"></i>
-													</button>
-												</div>
-											</div>
-										</form>
+	<div class="header-container">
+		<div class="header-body">
+			<div class="header-body-left">
+				<ul class="navbar-nav">
+					<li class="nav-item navigation-toggler">
+						<a href="#" class="nav-link">
+							<i class="ti-menu"></i>
+						</a>
+					</li>
+					<li class="nav-item">
+						<div class="header-search-form">
+							<form>
+								<div class="input-group">
+									<div class="input-group-prepend">
+										<button class="btn">
+											<i class="ti-search"></i>
+										</button>
 									</div>
-								</li>
-							</ul>
+									<input type="text" class="form-control" placeholder="Search something...">
+									<div class="input-group-append">
+										<button class="btn header-search-close-btn">
+											<i data-feather="x"></i>
+										</button>
+									</div>
+								</div>
+							</form>
 						</div>
+					</li>
+				</ul>
+			</div>
 
-						<div class="header-body-right">
-							<ul class="navbar-nav">
-								<li class="nav-item">
-									<a href="#" class="nav-link mobile-header-search-btn" title="Search">
-										<i class="ti-search"></i>
-									</a>
-								</li>
-								<li class="nav-item">
-									<a href="#" class="nav-link" title="Dark">
-										<i class="fa fa-moon-o"></i>
-									</a>
-								</li>
+			<div class="header-body-right">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a href="#" class="nav-link mobile-header-search-btn" title="Search">
+							<i class="ti-search"></i>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="#" class="nav-link" title="Dark">
+							<i class="fa fa-moon-o"></i>
+						</a>
+					</li>
 
-								<li class="nav-item dropdown">
-									<a href="#" class="nav-link nav-link-notify" title="Notifications" data-toggle="dropdown">
-										<i class="ti-bell"></i>
-									</a>
-									<div class="dropdown-menu dropdown-menu-right dropdown-menu-big">
-										<div class="bg-primary px-3 py-3">
-											<h6 class="mb-0">Notifications</h6>
-										</div>
-										<div class="dropdown-scroll">
-											<ul class="list-group list-group-flush">
-												<li>
-													<a href="#" class="list-group-item d-flex hide-show-toggler">
-														<div>
-															<figure class="avatar mr-3">
+					<li class="nav-item dropdown">
+						<a href="#" class="nav-link nav-link-notify" title="Notifications" data-toggle="dropdown">
+							<i class="ti-bell"></i>
+						</a>
+						<div class="dropdown-menu dropdown-menu-right dropdown-menu-big">
+							<div class="bg-primary px-3 py-3">
+								<h6 class="mb-0">Notifications</h6>
+							</div>
+							<div class="dropdown-scroll">
+								<ul class="list-group list-group-flush">
+									<li>
+										<a href="#" class="list-group-item d-flex hide-show-toggler">
+											<div>
+												<figure class="avatar mr-3">
 																<span class="avatar-title bg-secondary-bright text-secondary rounded-circle">
 																	<i class="ti-server"></i>
 																</span>
-															</figure>
-														</div>
-														<div class="flex-grow-1">
-															<p class="mb-0">
-																Your storage space is running low!
-																<i title="Mark as unread" data-toggle="tooltip" class="hide-show-toggler-item fa fa-check font-size-11 position-absolute right-0 top-0 mr-3 mt-3"></i>
-															</p>
-															<span class="text-muted small">4 sec ago</span>
-														</div>
-													</a>
-												</li>
-												<li>
-													<a href="#" class="list-group-item d-flex hide-show-toggler">
-														<div>
-															<figure class="avatar mr-3">
-																<img src="assets/media/image/user/man_avatar4.jpg" class="rounded-circle" alt="avatar">
-															</figure>
-														</div>
-														<div>
-															<p class="mb-0">
-																<span class="text-primary">Jonny Richie</span> uploaded new
-																files
-																<i title="Mark as read" data-toggle="tooltip" class="hide-show-toggler-item fa fa-circle-o font-size-11 position-absolute right-0 top-0 mr-3 mt-3"></i>
-															</p>
-															<span class="text-muted small">20 min ago</span>
-														</div>
-													</a>
-												</li>
-												<li class="text-divider text-center small pb-2 px-3">
-													<span>Old notifications</span>
-												</li>
-												<li>
-													<a href="#" class="list-group-item d-flex hide-show-toggler">
-														<div>
-															<figure class="avatar mr-3">
+												</figure>
+											</div>
+											<div class="flex-grow-1">
+												<p class="mb-0">
+													Your storage space is running low!
+													<i title="Mark as unread" data-toggle="tooltip" class="hide-show-toggler-item fa fa-check font-size-11 position-absolute right-0 top-0 mr-3 mt-3"></i>
+												</p>
+												<span class="text-muted small">4 sec ago</span>
+											</div>
+										</a>
+									</li>
+									<li>
+										<a href="#" class="list-group-item d-flex hide-show-toggler">
+											<div>
+												<figure class="avatar mr-3">
+													<img src="assets/media/image/user/man_avatar4.jpg" class="rounded-circle" alt="avatar">
+												</figure>
+											</div>
+											<div>
+												<p class="mb-0">
+													<span class="text-primary">Jonny Richie</span> uploaded new
+													files
+													<i title="Mark as read" data-toggle="tooltip" class="hide-show-toggler-item fa fa-circle-o font-size-11 position-absolute right-0 top-0 mr-3 mt-3"></i>
+												</p>
+												<span class="text-muted small">20 min ago</span>
+											</div>
+										</a>
+									</li>
+									<li class="text-divider text-center small pb-2 px-3">
+										<span>Old notifications</span>
+									</li>
+									<li>
+										<a href="#" class="list-group-item d-flex hide-show-toggler">
+											<div>
+												<figure class="avatar mr-3">
 																<span class="avatar-title bg-info-bright text-info rounded-circle">
 																	<i class="fa fa-cloud-upload"></i>
 																</span>
-															</figure>
-														</div>
-														<div class="flex-grow-1">
-															<p class="mb-0">
-																Upgrade plan
-																<i title="Mark as unread" data-toggle="tooltip" class="hide-show-toggler-item fa fa-check font-size-11 position-absolute right-0 top-0 mr-3 mt-3"></i>
-															</p>
-															<span class="text-muted small">45 sec ago</span>
-														</div>
-													</a>
-												</li>
-												<li>
-													<a href="#" class="list-group-item d-flex hide-show-toggler">
-														<div>
-															<figure class="avatar mr-3">
+												</figure>
+											</div>
+											<div class="flex-grow-1">
+												<p class="mb-0">
+													Upgrade plan
+													<i title="Mark as unread" data-toggle="tooltip" class="hide-show-toggler-item fa fa-check font-size-11 position-absolute right-0 top-0 mr-3 mt-3"></i>
+												</p>
+												<span class="text-muted small">45 sec ago</span>
+											</div>
+										</a>
+									</li>
+									<li>
+										<a href="#" class="list-group-item d-flex hide-show-toggler">
+											<div>
+												<figure class="avatar mr-3">
 																<span class="avatar-title bg-success-bright text-success rounded-circle">
 																	<i class="ti-share"></i>
 																</span>
-															</figure>
-														</div>
-														<div class="flex-grow-1">
-															<p class="mb-0">
-																A file has been shared
-																<i title="Mark as unread" data-toggle="tooltip" class="hide-show-toggler-item fa fa-check font-size-11 position-absolute right-0 top-0 mr-3 mt-3"></i>
-															</p>
-															<span class="text-muted small">58 sec ago</span>
-														</div>
-													</a>
-												</li>
-											</ul>
-										</div>
-										<div class="px-3 py-2 text-right border-top">
-											<ul class="list-inline small">
-												<li class="list-inline-item mb-0">
-													<a href="#">Mark All Read</a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</li>
-
-								<li class="nav-item dropdown">
-									<a href="#" class="nav-link" title="Settings" data-sidebar-target="#settings">
-										<i class="ti-settings"></i>
-									</a>
-								</li>
-
-								<li class="nav-item dropdown">
-									<a href="#" class="nav-link profile-nav-link dropdown-toggle" title="User menu" data-toggle="dropdown">
-										<span class="mr-2 d-sm-inline d-none">Bony Gidden</span>
-										<figure class="avatar avatar-sm">
-											<img src="assets/media/image/user/man_avatar3.jpg" class="rounded-circle" alt="avatar">
-										</figure>
-									</a>
-									<div class="dropdown-menu dropdown-menu-right dropdown-menu-big">
-										<div class="text-center py-4" data-background-image="assets/media/image/image1.jpg">
-											<figure class="avatar avatar-lg mb-3 border-0">
-												<img src="assets/media/image/user/man_avatar3.jpg" class="rounded-circle" alt="image">
-											</figure>
-											<h5 class="mb-0">Bony Gidden</h5>
-										</div>
-										<div class="list-group list-group-flush">
-											<a href="#" class="list-group-item" data-sidebar-target="#settings">Settings</a>
-											<a href="" class="list-group-item text-danger" data-sidebar-target="#settings">Sign Out!</a>
-										</div>
-										<div class="pb-0 p-4">
-											<div class="mb-4">
-												<h6 class="d-flex justify-content-between">
-													Completed Tasks
-													<span class="float-right">%68</span>
-												</h6>
-												<div class="progress" style="height:5px;">
-													<div class="progress-bar bg-primary" role="progressbar" style="width: 68%;" aria-valuenow="68"
-													 aria-valuemin="0" aria-valuemax="100"></div>
-												</div>
+												</figure>
 											</div>
-										</div>
-									</div>
-								</li>
-							</ul>
+											<div class="flex-grow-1">
+												<p class="mb-0">
+													A file has been shared
+													<i title="Mark as unread" data-toggle="tooltip" class="hide-show-toggler-item fa fa-check font-size-11 position-absolute right-0 top-0 mr-3 mt-3"></i>
+												</p>
+												<span class="text-muted small">58 sec ago</span>
+											</div>
+										</a>
+									</li>
+								</ul>
+							</div>
+							<div class="px-3 py-2 text-right border-top">
+								<ul class="list-inline small">
+									<li class="list-inline-item mb-0">
+										<a href="#">Mark All Read</a>
+									</li>
+								</ul>
+							</div>
 						</div>
-					</div>
+					</li>
 
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item header-toggler">
-							<a href="#" class="nav-link">
-								<i class="ti-arrow-down"></i>
-							</a>
-						</li>
-						<li class="nav-item sidebar-toggler">
-							<a href="#" class="nav-link">
-								<i class="ti-cloud"></i>
-							</a>
-						</li>
-					</ul>
-				</div>
+					<li class="nav-item dropdown">
+						<a href="#" class="nav-link" title="Settings" data-sidebar-target="#settings">
+							<i class="ti-settings"></i>
+						</a>
+					</li>
+
+					<li class="nav-item dropdown">
+						<a href="#" class="nav-link profile-nav-link dropdown-toggle" title="User menu" data-toggle="dropdown">
+							<span class="mr-2 d-sm-inline d-none">Bony Gidden</span>
+							<figure class="avatar avatar-sm">
+								<img src="assets/media/image/user/man_avatar3.jpg" class="rounded-circle" alt="avatar">
+							</figure>
+						</a>
+						<div class="dropdown-menu dropdown-menu-right dropdown-menu-big">
+							<div class="text-center py-4" data-background-image="assets/media/image/image1.jpg">
+								<figure class="avatar avatar-lg mb-3 border-0">
+									<img src="assets/media/image/user/man_avatar3.jpg" class="rounded-circle" alt="image">
+								</figure>
+								<h5 class="mb-0">Bony Gidden</h5>
+							</div>
+							<div class="list-group list-group-flush">
+								<a href="#" class="list-group-item" data-sidebar-target="#settings">Settings</a>
+								<span id="logout" style="cursor: pointer;"  class="list-group-item text-danger">注销</span>
+							</div>
+							<div class="pb-0 p-4">
+								<div class="mb-4">
+									<h6 class="d-flex justify-content-between">
+										Completed Tasks
+										<span class="float-right">%68</span>
+									</h6>
+									<div class="progress" style="height:5px;">
+										<div class="progress-bar bg-primary" role="progressbar" style="width: 68%;" aria-valuenow="68"
+											 aria-valuemin="0" aria-valuemax="100"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+				</ul>
 			</div>
-			<!-- ./ Header -->
+		</div>
+
+		<ul class="navbar-nav ml-auto">
+			<li class="nav-item header-toggler">
+				<a href="#" class="nav-link">
+					<i class="ti-arrow-down"></i>
+				</a>
+			</li>
+			<li class="nav-item sidebar-toggler">
+				<a href="#" class="nav-link">
+					<i class="ti-cloud"></i>
+				</a>
+			</li>
+		</ul>
+	</div>
+</div>
+<!-- ./ Header -->
+<script type="text/javascript">
+	$("#logout").click(function() {
+		window.location.href = "login.html";
+		$.removeCookie('token');
+	});
+</script>
