--- a/src/main/react/public/index.html
+++ b/src/main/react/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  style="height: 100%;">
   <head>
     <meta charset="utf-8" />
     <title>dtrun</title>
   </head>
-  <body>
+  <body  style="height: 100%;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="height: 100%;"></div>
   </body>
 </html>
